@@ -80,6 +80,7 @@ enum {
 	CHEAT_HAVEFUN,
 	CHEAT_SETFORCEDPARKRATING,
 	CHEAT_NEVERENDINGMARKETING,
+	CHEAT_RESETDATE,
 };
 
 enum {
