@@ -3335,6 +3335,7 @@ enum {
 	STR_DEBUG_PAINT_SHOW_SEGMENT_HEIGHTS = 5901,
 	STR_DEBUG_PAINT_SHOW_BOUND_BOXES = 5902,
 	STR_DEBUG_DROPDOWN_DEBUG_PAINT = 5903,
+	STR_CHEAT_RESET_DATE = 5904,
 
 	// Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
 	STR_COUNT = 32768
